Added more comments to Searcher